# ros_basics

my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/src/: my_cpp_node.cpp
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: my_sample_node.py  my_simple_publisher.py  my_simple_subscriber.py  simple_service_client.py  simple_service_server.py  template.txt
